# xiaozhi-kws

./: .gitignore  README.md  TUTORIAL.md  convert_to_onnx.py  requirements.txt  validate_model.py
config/: feature_config.json  train_config.yaml
tools/tts/: KWS_AUDIO_README.md  env.sh  kws_audio_gen_by_google.py  kws_negative_samples_gen.py
xiaozhi_kws/: __init__.py
xiaozhi_kws/inference/: __init__.py  demo.py  detector.py
xiaozhi_kws/models/: __init__.py  cnn_gru.py
xiaozhi_kws/train/: train.py  trainer.py
xiaozhi_kws/utils/: __init__.py  data_preparation.py  dataset.py  feature_extractor.py
xiaozhi_kws_cpp/: CMakeLists.txt
xiaozhi_kws_cpp/examples/: batch_detector.cpp  feature_extractor_test.cpp  kws_folder_inference.cpp
xiaozhi_kws_cpp/include/: audio_utils.h  config.h  config_parser.h  detector.h  feature_extractor.h  mfcc_features.h  model.h  post_processor.h  xiaozhi_kws.h
xiaozhi_kws_cpp/src/: audio_utils.cpp  config_parser.cpp  detector.cpp  feature_extractor.cpp  mfcc_features.cpp  model.cpp  post_processor.cpp  xiaozhi_kws.cpp
xiaozhi_kws_cpp/tests/: test_post_processor.cpp
